--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 	repositories {
 		mavenCentral()
 		maven {
-			url "https://plugins.gradle.org/m2/"
+			url = "https://plugins.gradle.org/m2/"
 		}
 	}
 	dependencies {
@@ -186,7 +186,7 @@ subprojects {
 }
 
 task clean(type: Delete) {
-	group 'Build'
-	description 'Deletes the local repositories'
+	group = 'Build'
+	description = 'Deletes the local repositories'
 	delete 'build'
 }
