fix some deprecations

--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,12 @@ buildscript {
 		}
 	}
 	dependencies {
-		classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:6.4.0"
 		classpath "org.xtext:xtext-gradle-plugin:4.0.0"
 	}
+}
+
+plugins {
+	id "biz.aQute.bnd.builder" version "6.4.0" apply false
 }
 
 ext.buildTime = DateTimeFormatter.ofPattern('yyyyMMdd-HHmm').format(LocalDateTime.now())
@@ -41,6 +44,7 @@ subprojects {
 	apply plugin: 'org.xtext.xtend'
 	apply plugin: 'eclipse'
 	apply plugin: 'maven-publish'
+	apply plugin: 'biz.aQute.bnd.builder'
 
 	apply from: "${rootDir}/gradle/java-compiler-settings.gradle"
 	apply from: "${rootDir}/gradle/xtend-compiler-settings.gradle"
