--- a/org.eclipse.lsp4j.websocket.jakarta/build.gradle
+++ b/org.eclipse.lsp4j.websocket.jakarta/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	testImplementation "junit:junit:$versions.junit"
 }
 
-jar.bundle.bnd (
-	'Import-Package': '*'
-)
+tasks.named('jar') {
+	bundle {
+		bnd(
+			'Import-Package': '*'
+		)
+	}
+}
